--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,9 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.crypto.secret = "changeme"
+play.http.secret.key = "changeme"
+
+swagger.api.basepath = "http://localhost:9000"
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -65,7 +67,7 @@ play.modules {
   #disabled += ""
 }
 
-mongodb.uri = "mongodb://localhost:27017/gmr"
+mongodb.uri = "mongodb://localhost:27017/example"
 
 ## IDE
 # https://www.playframework.com/documentation/latest/IDE
@@ -234,6 +236,9 @@ play.filters {
   # across different domains.
   # NOTE: You MUST apply the CORS configuration before the CSRF filter, as CSRF has
   # dependencies on CORS settings.
+
+  enabled += "play.filters.headers.SecurityHeadersFilter"
+
   cors {
     # Filter paths by a whitelist of path prefixes
     #pathPrefixes = ["/some/path", ...]
@@ -280,7 +285,7 @@ play.filters {
     #permittedCrossDomainPolicies = "master-only"
 
     # The Content-Security-Policy header. If null, the header is not set.
-    #contentSecurityPolicy = "default-src 'self'"
+    contentSecurityPolicy = null
   }
 
   ## Allowed hosts filter configuration
