--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,7 +42,7 @@ akka {
 # This must be changed for production, but we don't recommend you change it in this file.
 play.http.secret.key = "changeme"
 
-swagger.api.basepath = "http://localhost:9000"
+swagger.api.uri = "http://localhost:9000"
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
