Changed db name

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,7 +67,7 @@ play.modules {
   #disabled += ""
 }
 
-mongodb.uri = "mongodb://localhost:27017/example"
+mongodb.uri = "mongodb://localhost:27017/todo-app"
 
 ## IDE
 # https://www.playframework.com/documentation/latest/IDE
